# gtm-presales-mcp

./: .env.example  .gitignore  PROJECT.md  README.md  main.py  pyproject.toml  server.py
schemas/: account.py
tools/: analyser.py  filter.py  github_researcher.py  notion_writer.py  research.py
