[project]
name = "gtm-presales-mcp"
version = "0.1.0"
description = "MCP server for SE pre-sales workflow — account research, MEDDIC extraction, deal tracking"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "tavily-python",
    "pydantic>=2.0",
    "python-dotenv",
    "notion-client>=3.1.0",
    "anthropic>=0.111.0",
    "httpx>=0.28.1",
]

